--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-transformer-remark": "^2.13.0",
     "gatsby-transformer-sharp": "^2.7.0",
-    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "sass": "^1.30.0"
   },
   "repository": {
     "type": "git",
