--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-sass": "^2.6.0",
-    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-remark": "^2.13.0",
     "gatsby-transformer-sharp": "^2.7.0",
+    "gsap": "^3.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
