--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.7.0",
     "gsap": "^3.5.1",
     "react": "^16.12.0",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
