--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
@@ -25,7 +26,8 @@
     "gsap": "^3.5.1",
     "react": "^16.12.0",
     "react-device-detect": "^1.15.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2",
